--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "DevColorKit",
-  "id": "1346053186775427251",
+  "name": "ColorKit",
+  "id": "797696673804519719",
   "api": "1.0.0",
   "main": "code.js",
   "capabilities": [],
